--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,28 +37,8 @@ build_infra:
   - cd infra
   - terraform init
   script:
-  - terraform plan -out=tfplan
-  - terraform apply -auto-approve tfplan
-
-# deploy:
-#   stage: deploy
-#   image: amazon/aws-cli:latest
-#   before_script:
-#   - apk add --no-cache curl
-#   - curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-#   - install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-
-#   # Configure AWS credentials (stored as GitLab CI/CD variables) 
-#   - aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID"
-#   - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"
-#   - aws configure set default.region "us-east-1"
-#   # Generate kubeconfig for EKS cluster
-#   - aws eks update-kubeconfig --name webserver-cluster --region us-east-1
-#   # Move into k8s folder
-#   - cd k8s
-
-#   script:
-#   - kubectl apply -f .
+  - terraform plan
+  - terraform apply -auto-approve
 
 deploy:
   stage: deploy
